# MasterThesis

./: README.md
Code_Masterthesis/LCI_UI/: truffle-config.js
Code_Masterthesis/LCI_UI/client/: README.md  package-lock.json  package.json
Code_Masterthesis/LCI_UI/client/src/: .env  App.css  App.js  CMakeCache.txt  CMakeLists.txt  Makefile  app.js  cmake_install.cmake  cronjobs.js  eventlog.txt  getEvents.js  getLCIData.sh  retrieveDataAndCalcLCI.js  theGraphQuery.js
Code_Masterthesis/LCI_UI/client/src/Encryption_test_SEAL/: encrypt  encrypt.cpp
Code_Masterthesis/LCI_UI/client/src/SC_testdata/: Ben_Toaster.json  Dampf.json  Ent_Toaster.json  Stahl.json  Toaster.json
Code_Masterthesis/LCI_UI/client/src/artifacts/: LCIBlockchain.json  Migrations.json
Code_Masterthesis/LCI_UI/contracts/: LCIBlockchain.sol
Code_Masterthesis/LCI_UI/migrations/: 2_deploy_contracts.js
Code_Masterthesis/buidler/: README.md  buidler.config.js  interactwithsmartcontract.js  package-lock.json  package.json
Code_Masterthesis/buidler/artifacts/: EnvItem.json  LCIBlockchain.json
Code_Masterthesis/buidler/cache/: solc-input.json
Code_Masterthesis/buidler/contracts/: ERC712Token.sol  LCIBlockchain.sol
Code_Masterthesis/buidler/test/: ERC721TokenTest.js  LCIBlockchainTest.js
Code_Masterthesis/subgraph/: schema.graphql  subgraph.yaml
Code_Masterthesis/subgraph/src/: mapping.ts
