cmake_minimum_required(VERSION 3.10)
project(Test)
find_package(PkgConfig REQUIRED)
find_package(SEAL)
pkg_check_modules(JSONCPP jsoncpp)
link_libraries(${JSONCPP_LIBRARIES})
add_executable(encrypt encrypt.cpp)
target_link_libraries(encrypt SEAL::seal)
target_link_libraries(encrypt ${JSONCPP_LIBRARIES})
